# VoxelWorld

./: CMakeLists.txt  README.md
VoxelWorld/: CMakeLists.txt
VoxelWorld/res/: box.vox  skeleton.glb  skeleton.vox  skeleton2.vox  sphere2.vox  sphere3.vox  tree.vox  untitled.glb  untitled.vox  untitled2.glb
VoxelWorld/res/Shaders/: Quad.shader  QuadCompute.shader  frag.spv  vert.spv  voxel.shader  voxel_blend.shader  voxel_light.shader  voxel_normals.shader
VoxelWorld/src/: Game.cpp  Game.h  Main.cpp  ogt_vox.h
VoxelWorld/src/Animation/: AnimationController.cpp  AnimationController.h  Common.h
VoxelWorld/src/Animations/: Skeleton.cpp  Skeleton.h
VoxelWorld/src/Asset/: MeshAsset.cpp  MeshAsset.h  ModelAsset.cpp  ModelAsset.h
VoxelWorld/src/Core/: Application.cpp  Application.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h
VoxelWorld/src/Graphics/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
VoxelWorld/src/Helpers/: Math.h
VoxelWorld/src/Import/: Image.h  MeshImport.cpp  MeshImport.h
VoxelWorld/src/Loaders/: GLTF.cpp  GLTF.h
VoxelWorld/src/Renderer/: Camera.cpp  Mesh.cpp  Mesh.h  VoxelMesh.cpp  VoxelMesh.h  VoxelTexture.cpp  VoxelTexture.h
VoxelWorld/src/Scene/: Camera.h  Common.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Transform.h
VoxelWorld/src/Shaders/: shader.frag  shader.vert
VoxelWorld/src/Vulkan/: Allocator.h  UniqueVmaAllocator.h  VkAllocator.h  VkContext.cpp  VkContext.h  VkDebug.h  VkImages.h  VkTools.h  VkTypes.h  VkUtils.h
